# JPEG-compression

./: jpeg_compressor.py  lookup_table.py  setup.cfg  test.test
src/: dct.py  jpeg_compressor.py
src/pyimagery/: _type_hint.py  utils.py
src/pyimagery/jpeg/: dct.py  huffman.py  jpeg_compressor.py  lookup_table.py  main.py  runlength.py
src/pyimagery/utils/: binary.py
test/: test_jpeg_compress.py
