[metadata]
name = pyimagery
version = 0.0.1
author = RESPULTE
author_email = yeapzing@gmail.com
description = an image processing library to get to know all the common image file type 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RESPULTE/PyImagery
project_urls =
    Bug Tracker = https://github.com/RESPULTE/PyImagery/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src